--- a/chess-to-go/package.json
+++ b/chess-to-go/package.json
@@ -9,14 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~48.0.11",
-    "expo-image-picker": "^14.1.1",
-    "expo-status-bar": "~1.4.4",
-    "react": "^18.2.0",
-    "react-native": "0.71.6"
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/stack": "^6.3.16",
+    "expo": "^47.0.0",
+    "expo-camera": "~13.1.0",
+    "expo-image-picker": "~14.0.2",
+    "expo-permissions": "~14.0.0",
+    "expo-status-bar": "~1.4.2",
+    "react": "18.1.0",
+    "react-native": "0.70.5",
+    "react-native-paper": "^5.6.0",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.19.3"
   },
   "private": true
 }
