finish api calls

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 TWILIO_ACCOUNT_SID=AC6d3c09cdfcee9c6f792456ba3bf74d28
 TWILIO_AUTH_TOKEN=0c0b32d9fcabea0be6f5681cb6ad2f27
+ROBOFLOW_API_KEY=Jtej9GIkDSfK7OQaRBBp
