--- a/chess-to-go/package.json
+++ b/chess-to-go/package.json
@@ -19,9 +19,11 @@
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.8",
+    "react-native-draggable": "^3.3.0",
     "react-native-paper": "^5.6.0",
     "react-native-vector-icons": "^9.2.0",
-    "twilio": "^4.10.0"
+    "twilio": "^4.10.0",
+    "useref": "^1.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.21.4",
