finish up backend

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,6 @@
-TWILIO_ACCOUNT_SID=SK1aef52ce261e886d67f22ae304769817
-TWILIO_AUTH_TOKEN=615464909a9537898d49a8d11d92d824
-ROBOFLOW_AUTH_KEY=Jtej9GIkDSfK7OQaRBBp
+TWILIO_ACCOUNT_SID=ACfb72a026594680cd9d0f9ed72d9621cd
+TWILIO_AUTH_TOKEN=3b76bf5182b0c6db6eb9bc4233a525ea
+ROBOFLOW_AUTH_KEY=4X6Ho3JkDLPm3bknicTg
+ROBOFLOW_PROJECT_ID=chess-pieces-fntoa
+ROBOFLOW_PROJECT_VERSION=3
+BACKEND_IP=10.104.11.53
